# thesis-code

./: .gitignore  README.md  average_deviations.py  batch_ply.py  centroid_distances.ipynb  collect_camera_poses.py  collect_centroids.py  collect_s3ids_files.py  compare_real_virtual_stddevs.ipynb  compare_stddevs.ipynb  crop_by_bounding_box.py  crop_point_clouds.ipynb  depth_map.ipynb  distances_to_deviations_by_laser.py  distances_to_pcd.py  elongations.csv  empty.blend  error_pipeline.py  estimate_laser_errors.ipynb  evd_reader.py  evds_to_pcds.py  evds_to_txts.py  exploration_scan_script.py  extract_poitns.ipynb  extract_scanner_positions.ipynb  floor_polynomials.txt  get_distances.py  get_elongation.ipynb  h5_pyntcloud.ipynb  histograms.ipynb  json2obj.py  noise_distributions.ipynb  pccarena_results.ipynb  pcd_relabel.py  per_laser_errors.ipynb  plot_stddevs.ipynb  point_counts.ipynb  primitive_scanning.py  prune_scanner_positions.ipynb  reader.py  (+8 more)
cpp/: CMakeLists.txt  readme.md
cpp/src/: get_centroids.cpp  get_plane_distances.cpp  set_laser_id_as_label.cpp  utils.h
docker/: Dockerfile  pipeline.py  readme.md
plots/: readme.md
s3dis_locations/: locations1.json  locations2.json  locations3.json  locations4.json  locations5a.json  locations5b.json  locations6.json  locations_pruned1.json  locations_pruned2.json  locations_pruned3.json  locations_pruned4.json  locations_pruned5a.json  locations_pruned5b.json  locations_pruned6.json  readme.md
thesis/: utils.py
